--- a/reviews/sky-computing.org
+++ b/reviews/sky-computing.org
@@ -1,7 +1,7 @@
 #+TAGS: stoica infra
 
 
-* paper name
+* From Cloud Computing to Sky Computing
 ** Review
 *** Info
 - *Arxiv:* https://sigops.org/s/conferences/hotos/2021/papers/hotos21-s02-stoica.pdf
