--- a/reviews/cl-theoretical.org
+++ b/reviews/cl-theoretical.org
@@ -66,13 +66,13 @@ This paper also shows that WIP and TIP are /necessary and sufficient/ for good C
 ** 1 Introduction
 CIL: The learning process builds a single classifier for all the tasks/classes learned so far. Any test instance from any class can be presented for classification. No task information (e.g. task id) will be presented at test time.
 *** Class Incremental Learning
-$$D_k = \{(x_k^i, y_k^i)\}_{i=1}^{n_k}$$ describes the training dataset for each task $$k$$ where $$x_k^i$$ is an input sample and $$y_k^i$$ is a label for that sample.
+$D_k = \{(x_k^i, y_k^i)\}_{i=1}^{n_k}$ describes the training dataset for each task $k$ where $x_k^i$ is an input sample and $y_k^i$ is a label for that sample.
 
-The goal is to create a model such that given any $$x$$ sample you can get to a $$y$$ label. In training, the task ids may be presented, but in testing, they may not be presented
+The goal is to create a model such that given any $x$ sample you can get to a $y$ label. In training, the task ids may be presented, but in testing, they may not be presented
 *** Task Incremental Learning
-$$D_k = \{((x_k^i, k), y_k^i)\}_{i=1}^{n_k}$$ the big difference here from CIL is $$x_k^i$$ vs $$(x_k^i, k)$$. The above definitions work the same here.
+$D_k = \{((x_k^i, k), y_k^i)\}_{i=1}^{n_k}$ the big difference here from CIL is $x_k^i$ vs $(x_k^i, k)$. The above definitions work the same here.
 
-The goal is to create a model such that for any $$(x, k)$$ you can find a corresponding $$y$$.
+The goal is to create a model such that for any $(x, k)$ you can find a corresponding $y$.
 *** Open world setting issues with CIL
 The main concept being analyzed here is how In-Distribution (IND) samples play with Out-Of-Distribution (OOD) samples (in testing). The main issue in open world settings (where tasks have not always been seen before) is to figure out IND/OOD. This paper will do the following:
 1. Create a theoretical foundation for:
@@ -97,75 +97,75 @@ Two goals:
 
 *** 3.1 CIL Problem Decomposition
 **** Definition of the input/tasks
-Tasks are defined as $$\{(X_k, Y_k)\}_{k=1,\ldots,T}$$. $$X_k$$ is the domain of task $$k$$. $$Y_k$$ are the classes of task $$k$$. $$Y_k$$ can be further decomposed into $$Y_{k,j}$$s where $$j$$ is the class of task $$k$$. In other terms, $$k$$ is the superclass, while $$j$$ is the class of an input.
+Tasks are defined as $\{(X_k, Y_k)\}_{k=1,\ldots,T}$. $X_k$ is the domain of task $k$. $Y_k$ are the classes of task $k$. $Y_k$ can be further decomposed into $Y_{k,j}$s where $j$ is the class of task $k$. In other terms, $k$ is the superclass, while $j$ is the class of an input.
 ***** Assumption 1
 The classes of the same task are disjoint (there is no overlap between classes of the same task)
 ***** Assumption 2
 The domains of tasks are disjoint (there is no overlap between the tasks themselves)
 **** Decomposition into WP and TP
-Goal of CIL problem: $$P(x \in X_{k,j} | D)$$. The probability of the $$k,j$$ superclass class pairing for a given input $$D$$
+Goal of CIL problem: $P(x \in X_{k,j} | D)$. The probability of the $k,j$ superclass class pairing for a given input $D$
 
 Expanded out the WP and TP probabilities are:
-- WP: $$P(x \in X_{k,j} | x \in X_k, D)$$. Given the superclass $$k$$, what is the probability the input $$D$$ corresponds to class $$j$$
-- TP: $$P(x \in X_k | D)$$. What is the probability input $$D$$ corresponds to class $$k$$
+- WP: $P(x \in X_{k,j} | x \in X_k, D)$. Given the superclass $k$, what is the probability the input $D$ corresponds to class $j$
+- TP: $P(x \in X_k | D)$. What is the probability input $D$ corresponds to class $k$
 
-Based off those two assumptions, we can expand out $$P(x \in X_{k,j} | D)$$ to the following
+Based off those two assumptions, we can expand out $P(x \in X_{k,j} | D)$ to the following
 
 \begin{equation}
 P(x \in X_{k_0,j_0} | D) = \sum_{k=1,\ldots,n}{P(x \in X_{k,j_0} | x \in X_k, D)P(x \in X_k |D)} \\
 = P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)P(x \in X_{k_0} | D)
 \end{equation}
-- Part 1: The probability input D is the superclass, class pairing $$k_0$$, $$j_0$$
-- Part 2: Definition for each of the different $$k$$ superclasses (representing the sum over each of the superclasses) and their probability leading into $$j_0$$
-- Part 3: Scoped back down for $$k_0$$ because of the Probability definition from the beginning.
+- Part 1: The probability input D is the superclass, class pairing $k_0$, $j_0$
+- Part 2: Definition for each of the different $k$ superclasses (representing the sum over each of the superclasses) and their probability leading into $j_0$
+- Part 3: Scoped back down for $k_0$ because of the Probability definition from the beginning.
 
-$$P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)$$ here defines the WP probability. What are the chances, given superclass $$k_0$$, D corresponds to class $$j_0$$
+$P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)$ here defines the WP probability. What are the chances, given superclass $k_0$, D corresponds to class $j_0$
 
-$$P(x \in X_{k_0} | D)$$ here defines the TP probability. What are the chances, input D corresponds to superclass $$k_0$$
+$P(x \in X_{k_0} | D)$ here defines the TP probability. What are the chances, input D corresponds to superclass $k_0$
 **** Remarks
-- $$P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)P(x \in X_{k_0} | D)$$ shows that improving either of the Probabilities (WP or TP) will improve CIL performance
+- $P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)P(x \in X_{k_0} | D)$ shows that improving either of the Probabilities (WP or TP) will improve CIL performance
 - This has nothing do with the training process or learning algorithms, but takes the probabilities as givens
 - Referring back to the assumptions, there does not say anything about classes crossing task/superclass boundaries (blurry tasks). It merely assumes that the tasks themselves are disjoint.
-- $$\textbf{CIL} = \textbf{WP} * \textbf{TP}$$, which implies that CIL problems can be described by their probabilistic definitions for WP and TP
+- $\textbf{CIL} = \textbf{WP} * \textbf{TP}$, which implies that CIL problems can be described by their probabilistic definitions for WP and TP
 *** 3.2 CIL Improves as WP and/or TP Improve
 This study analyzes performance with a /trained CIL model/, and uses *cross-entropy* as the performance measure of the trained model.
 
-Cross-Entropy definition over two probability distributions $$p$$ and $$q$$: $$H(p, q) := -\mathbb{E}_p[\log q] = - \sum_{i} p_i \log q_i$$ (this is just the basic cross entropy equation)
+Cross-Entropy definition over two probability distributions $p$ and $q$: $H(p, q) := -\mathbb{E}_p[\log q] = - \sum_{i} p_i \log q_i$ (this is just the basic cross entropy equation)
 
-For a $$x \in X$$, let $$y$$ be the ground truth label. $$y_{k_0,j_0} = 1$$ if $$x \in X_{k_0,j_0}$$ and $$y_{k_0,j_0} = 0$$ if $$(k,j) \ne (k_0,j_0)$$ (specifically $$\forall (k,j) \ne (k_0,j_0)$$). $$\tilde{y}$$ is the WP ground truth label and $$\bar{y}$$ is the TP ground truth label. $$\tilde{y}$$ and $$\bar{y}$$ follow the same pattern as $$y$$ when setting $$1$$ and $$0$$.
+For a $x \in X$, let $y$ be the ground truth label. $y_{k_0,j_0} = 1$ if $x \in X_{k_0,j_0}$ and $y_{k_0,j_0} = 0$ if $(k,j) \ne (k_0,j_0)$ (specifically $\forall (k,j) \ne (k_0,j_0)$). $\tilde{y}$ is the WP ground truth label and $\bar{y}$ is the TP ground truth label. $\tilde{y}$ and $\bar{y}$ follow the same pattern as $y$ when setting $1$ and $0$.
 
 Based off this notation, we can set the following definitions for cross-entropy for CIL, WP and TP:
-- WP: $$H_{WP}(x) = H(\tilde{y}, \{P(x \in X_{k_0,j} | x \in X_{k_0}, D)\}_j)$$
-- TP: $$H_{TP}(x) = H(\bar{y}, \{P(x \in X_{k}|D\}_{k}))$$
-- CIL: $$H_{CIL}(x) = H(y,\{P(x \in X_{k,j} | D\}_{k,j})$$
+- WP: $H_{WP}(x) = H(\tilde{y}, \{P(x \in X_{k_0,j} | x \in X_{k_0}, D)\}_j)$
+- TP: $H_{TP}(x) = H(\bar{y}, \{P(x \in X_{k}|D\}_{k}))$
+- CIL: $H_{CIL}(x) = H(y,\{P(x \in X_{k,j} | D\}_{k,j})$
 
 **** Theorem 1
-when $$H_{TP}(x) \le \delta$$ and $$H_{WP}(x) \le \epsilon$$ then $$H_{CIL} \le \delta + \epsilon$$. This definition says that the two cross entropies (TP and WP) are what compose the CIL cross entropy. This makes the /necessary and sufficient/ clause from the Introduction.
+when $H_{TP}(x) \le \delta$ and $H_{WP}(x) \le \epsilon$ then $H_{CIL} \le \delta + \epsilon$. This definition says that the two cross entropies (TP and WP) are what compose the CIL cross entropy. This makes the /necessary and sufficient/ clause from the Introduction.
 
-More detailed proof of this is given in [[https://arxiv.org/pdf/2211.02633#theorem.1][A.1]] (where $$H_{CIL}$$ is expanded out and decomposed into $$H_{WP}$$ and $$H_{TP}$$).
+More detailed proof of this is given in [[https://arxiv.org/pdf/2211.02633#theorem.1][A.1]] (where $H_{CIL}$ is expanded out and decomposed into $H_{WP}$ and $H_{TP}$).
 **** Corollary 1
 Corollary 1 expands on Theorem 1 to relate CIL to TP and WP individually (if TP is held constant, CIL is dependent on WP performance and vice versa).
 
-These two statements are formally defined by the following ($$U(X)$$ refers to the uniform distribution):
-- Take $$\( \mathbb{E}_{x \sim U(X)}[H_{TP}(x)] \leq \delta \)$$. Then $$\mathbb{E}_{x \sim U(X)}[H_{CIL}(x)] \leq \mathbb{E}_{x \sim U(X)}[H_{WP}(x)] + \delta$$ (CIL is dependent on WP performance - TP is held constant)
-- Take $$\( \mathbb{E}_{x \sim U(X)}[H_{WP}(x)] \leq \epsilon \)$$. Then $$\mathbb{E}_{x \sim U(X)}[H_{CIL}(x)] \leq \mathbb{E}_{x \sim U(X)}[H_{TP}(x)] + \epsilon$$ (CIL is dependent on TP performance - WP is held constant)
+These two statements are formally defined by the following ($U(X)$ refers to the uniform distribution):
+- Take $\( \mathbb{E}_{x \sim U(X)}[H_{TP}(x)] \leq \delta \)$. Then $\mathbb{E}_{x \sim U(X)}[H_{CIL}(x)] \leq \mathbb{E}_{x \sim U(X)}[H_{WP}(x)] + \delta$ (CIL is dependent on WP performance - TP is held constant)
+- Take $\( \mathbb{E}_{x \sim U(X)}[H_{WP}(x)] \leq \epsilon \)$. Then $\mathbb{E}_{x \sim U(X)}[H_{CIL}(x)] \leq \mathbb{E}_{x \sim U(X)}[H_{TP}(x)] + \epsilon$ (CIL is dependent on TP performance - WP is held constant)
 
 *** 3.3 Task Prediction (TP) to OOD Detection
 **** Definition of OOD
-Again, use cross-entropy $$H$$ to measure performance of TP and OOD detection.
-- Probability he $$k$$th task says input $$D$$ is OOD: $$P_{k}'(x \in X_k | D)$$
+Again, use cross-entropy $H$ to measure performance of TP and OOD detection.
+- Probability he $k$th task says input $D$ is OOD: $P_{k}'(x \in X_k | D)$
 
-$$P_{k}'(x \in X_k | D)$$ (OOD probability) is a Bernoulli distribution while $$P(x \in X_k | D)$$ (TP probability) is a categorical distribution over the superclasses/tasks
+$P_{k}'(x \in X_k | D)$ (OOD probability) is a Bernoulli distribution while $P(x \in X_k | D)$ (TP probability) is a categorical distribution over the superclasses/tasks
 
 OOD Detectors can be defined with two methods:
 1. Using the output values corresponding to the classes of the task
    - By taking sigmoid of maximum logit value
    - Maximum Softmax Probability after re-scaling to 0 to 1 (rescaling the logits)
 2. Defining the OOD detector as a function of tasks
-   - Mahalanobis distance: distance between a point and a distribution $$D_M(\mathbf{x}, \boldsymbol{\mu}) = \sqrt{(\mathbf{x} - \boldsymbol{\mu})^\top \mathbf{\Sigma}^{-1} (\mathbf{x} - \boldsymbol{\mu})}$$
-     - $$x$$: The data point whose distance is being measured
-     - $$\mu$$: The mean vector of the distribution
-     - $$\Sigma$$: The covariance matrix of the distribution - the covariance between each variable in the matrix [[https://www.youtube.com/watch?v=152tSYtiQbw][more on this]]
+   - Mahalanobis distance: distance between a point and a distribution $D_M(\mathbf{x}, \boldsymbol{\mu}) = \sqrt{(\mathbf{x} - \boldsymbol{\mu})^\top \mathbf{\Sigma}^{-1} (\mathbf{x} - \boldsymbol{\mu})}$
+     - $x$: The data point whose distance is being measured
+     - $\mu$: The mean vector of the distribution
+     - $\Sigma$: The covariance matrix of the distribution - the covariance between each variable in the matrix [[https://www.youtube.com/watch?v=152tSYtiQbw][more on this]]
 
 The cross entropy loss for OOD detector is defined by:
 \[
@@ -177,18 +177,18 @@ H(0, \mathbf{P}'_k(x \in \mathbf{X}_k | D)) = -\log \mathbf{P}'_k(x \notin \math
 
 **** Theorem 2
 ***** Bounding OOD cross entropy by a fixed TP cross entropy
-Assume $$x \in \textbf{X}_{k_0}$$
-- Case $$k=k_0$$: $$H_{OOD,k_0}(x) = -\log \mathbf{P}'_{k_0}(x \in \mathbf{X}_{k_0} | D) = -\log \mathbf{P}(x \in \mathbf{X}_{k_0} | D) = H_{TP}(x) \le \delta$$
-- Case $$k \ne k_0$$: Refer to [[https://arxiv.org/pdf/2211.02633#subsection.A.3][appendix]], the tricky part is $$-\log(\mathbf{P}(x \in \cup_{k' \ne k}X_{k'}|D)) \le -\log(\mathbf{P}(x \in X_{k_0} | D)$$. $$\cup_{k' \ne k}$$ defines the set of all tasks that is not equal to $$k'$$. The probability of that set must be $$\ge$$ than the prob of $$k_0$$ (which is then $$\le$$ because of the $$-\log$$). the $$\ge$$ inequality exists because $$k_0$$ is a subset of that $$\cup_{k' \ne k}$$ set union.
+Assume $x \in \textbf{X}_{k_0}$
+- Case $k=k_0$: $H_{OOD,k_0}(x) = -\log \mathbf{P}'_{k_0}(x \in \mathbf{X}_{k_0} | D) = -\log \mathbf{P}(x \in \mathbf{X}_{k_0} | D) = H_{TP}(x) \le \delta$
+- Case $k \ne k_0$: Refer to [[https://arxiv.org/pdf/2211.02633#subsection.A.3][appendix]], the tricky part is $-\log(\mathbf{P}(x \in \cup_{k' \ne k}X_{k'}|D)) \le -\log(\mathbf{P}(x \in X_{k_0} | D)$. $\cup_{k' \ne k}$ defines the set of all tasks that is not equal to $k'$. The probability of that set must be $\ge$ than the prob of $k_0$ (which is then $\le$ because of the $-\log$). the $\ge$ inequality exists because $k_0$ is a subset of that $\cup_{k' \ne k}$ set union.
 ***** Bounding TP cross entropy by OOD cross entropy
-Assume $$x \in \textbf{X}_{k_0}$$
-- Case $$k=k_0$$: $$H_{OOD}(x) \le \delta  $$ by the definition of cross entropy means $$-\log{\mathbf{P}'_{k_0}{x \in \mathbf{X}_{k_0} | D) \le \delta_{k_0}$$ which leads to $$\mathbf{P}'_{k_0}(x \in \mathbf{X}_{k0}|D) \ge e^{-\delta_{k_0}}$$
-- Case $$k \ne k_0$$: look at [[https://arxiv.org/pdf/2211.02633#subsection.A.3][appendix]]. TODO: understand this better
+Assume $x \in \textbf{X}_{k_0}$
+- Case $k=k_0$: $H_{OOD}(x) \le \delta  $ by the definition of cross entropy means $-\log{\mathbf{P}'_{k_0}{x \in \mathbf{X}_{k_0} | D) \le \delta_{k_0}$ which leads to $\mathbf{P}'_{k_0}(x \in \mathbf{X}_{k0}|D) \ge e^{-\delta_{k_0}}$
+- Case $k \ne k_0$: look at [[https://arxiv.org/pdf/2211.02633#subsection.A.3][appendix]]. TODO: understand this better
 **** Theorem 3
 Basically apply the analysis for WP and TP and the relation into CIL in 3.2 and plug in OOD instead (actually nothing more than this)
 *** 3.4 Necessary Conditions for Improving CIL
 This section is just done for completeness. Basically combining all of the previous theorems and doing the following:
-- Cross Entropy of $$H_{WP}(x) = H_{CIL}(x) \le \eta$$ , $$H_{TP}(x) \le H_{CIL}(x) \le \eta$$, and $$H_{OOD,i}(x) \le H_{TP}(x) \le \eta$$ which sets everything below $$\eta$$
+- Cross Entropy of $H_{WP}(x) = H_{CIL}(x) \le \eta$ , $H_{TP}(x) \le H_{CIL}(x) \le \eta$, and $H_{OOD,i}(x) \le H_{TP}(x) \le \eta$ which sets everything below $\eta$
 Intuitively, this makes sense given the relations in 3.2
 ** 4 New CIL Techniques and Experiments
 Goal is to slap on some existing OOD algorithms onto pre-existing CIL models and see the performance increase.
@@ -223,13 +223,13 @@ For replay methods, memory buffer size is:
 Hyperparameters suggested by the authors is what is used. If the results could not be replicated, a grid search is done over the hyperparameters with 10% of the training set.
 **** Evaluation Metrics
 1. /Average classification accuracy/: what was the classification accuracy of the models (also report /forgetting rate/ in Appendix J)
-2. /Average AUC/: Average Area Under the ROC Curve (Probability that the model will rank a randomly chosen positive sample higher than a randomly chosen negative sample [[https://developers.google.com/machine-learning/crash-course/classification/roc-and-auc][more info]]). Average $$AUC$$ means $$AUC = \sum_k \frac{AUC_k}{n}$$ where $$n$$ is the number of tasks.
+2. /Average AUC/: Average Area Under the ROC Curve (Probability that the model will rank a randomly chosen positive sample higher than a randomly chosen negative sample [[https://developers.google.com/machine-learning/crash-course/classification/roc-and-auc][more info]]). Average $AUC$ means $AUC = \sum_k \frac{AUC_k}{n}$ where $n$ is the number of tasks.
 **** Prediction Methods
-Use $$P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)P(x \in X_{k_0} | D)$$ ($$P(WP)P(TP)$$) to find Prediction
+Use $P(x \in X_{k_0,j_0} | x \in X_{k_0}, D)P(x \in X_{k_0} | D)$ ($P(WP)P(TP)$) to find Prediction
 - WP: Just take the softmax values of the classes in each task
 - TP: Do one of the following:
-  - For single classification head use $$\hat{y} = \textbf{argmax}\{f(x)\}$$ where $$f(x)$$ is the logit output of the network
-  - For multi-head methods (HAT, HyperNet, and Sup) use a concatenated output $$\hat{y} = \textbf{argmax}\{\bigoplus_{k}f(x)_k\}$$
+  - For single classification head use $\hat{y} = \textbf{argmax}\{f(x)\}$ where $f(x)$ is the logit output of the network
+  - For multi-head methods (HAT, HyperNet, and Sup) use a concatenated output $\hat{y} = \textbf{argmax}\{\bigoplus_{k}f(x)_k\}$
     - All of the logits are taken together and smashed into one single vector and then argmax is taken.
 *** 4.3 Better OOD Detection Produces Better CIL Performance
 **** Applying ODIN
@@ -250,7 +250,7 @@ Could not apply CSI to any of the backbones except for HAT and Sup (which is ana
 CSI is better that ODIN:
 [[./images/continual-learning-theoreticalp3.png]]
 **** Results
-A calibration method is used (denoted by $$+c$$ in the table) that optimizes HAT and Sup by including a small replay buffer of tasks. The accuracy is much higher than all the other baselines
+A calibration method is used (denoted by $+c$ in the table) that optimizes HAT and Sup by including a small replay buffer of tasks. The accuracy is much higher than all the other baselines
 [[./images/continual-learning-theoreticalp4.png]]
 Additionally, the TIL component improved with the methods given.
 *** 4.5 Implications for Existing CL Methods, Open-World Learning and Future Research
